changed the csv to df_final.csv instead of plane_data.csv

--- a/final_df_portion.ipynb
+++ b/final_df_portion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhyZagoaBM8wdSum3m4xmZ",
+      "authorship_tag": "ABX9TyOXCHGUvDW97UTq26X7kulS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Gt4gX9mf8NIh"
+        "id": "Gt4gX9mf8NIh",
+        "collapsed": true
       },
       "outputs": [],
       "source": [
@@ -45,7 +46,7 @@
       "metadata": {
         "id": "r5vgTGUY8Nzx"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -59,7 +60,7 @@
       "metadata": {
         "id": "s9H0NpVr8SbX"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -70,7 +71,7 @@
       "metadata": {
         "id": "hkuz0MEg8Ult"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -85,7 +86,7 @@
       "metadata": {
         "id": "8pNgJG6i8XBO"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -109,7 +110,7 @@
       "metadata": {
         "id": "gUIGlwJM8lVj"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -121,7 +122,7 @@
       "metadata": {
         "id": "V1UOHVYI8YnR"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -134,15 +135,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a-fSKz-b8o6P",
-        "outputId": "76c07c4d-9551-4777-c60f-c2ba1f980d22"
+        "outputId": "2348dfea-1cae-4874-8f0b-229ad91b6ee2"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 115/115 [03:11<00:00,  1.67s/it]\n"
+            "100%|██████████| 115/115 [02:39<00:00,  1.39s/it]\n"
           ]
         }
       ]
@@ -150,49 +151,119 @@
     {
       "cell_type": "code",
       "source": [
-        "final_df.to_csv('plane_data.csv',   index=False)"
+        "final_df.to_csv('final_df.csv',   index=False)"
       ],
       "metadata": {
         "id": "w_9XjGSI8sTf"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
-        "files.download('plane_data.csv')"
+        "files.download('final_df.csv')"
       ],
       "metadata": {
-        "id": "5IlHNEBh8xQK"
+        "id": "5IlHNEBh8xQK",
+        "outputId": "d08607f1-a72e-40f4-b7eb-4e4de8a8377c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_9a6e9e0a-1c6f-4a2e-a199-cc74c7bf9104\", \"final_df.csv\", 118946)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "if os.path.exists('plane_data.csv'):\n",
-        "    final_df = pd.read_csv('plane_data.csv')\n",
-        "else:\n",
-        "    final_df = pd.DataFrame(list(map(process_one_plane, tqdm(all_links))))"
+        "#if os.path.exists('plane_data.csv'):\n",
+        "#    final_df = pd.read_csv('plane_data.csv')\n",
+        "#else:\n",
+        "#    final_df = pd.DataFrame(list(map(process_one_plane, tqdm(all_links))))"
       ],
       "metadata": {
         "id": "_pO4mQUb81zA"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "final_df"
+        "#final_df"
       ],
       "metadata": {
         "id": "CA7MWrvb9moq"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     }
   ]
